src/objects/Account_Asset__c.object
<CustomObject>
    <fields>
        <fullName>AM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Assets3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>API_Name__c</fullName>
        <label>API Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Multicom</fullName>
                </value>
                <value>
                    <fullName>Top Dog</fullName>
                </value>
                <value>
                    <fullName>Travel Tech</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_10_API__c</fullName>
        <label>Account 10 API</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conferma</fullName>
                </value>
                <value>
                    <fullName>In House</fullName>
                </value>
                <value>
                    <fullName>Multicom</fullName>
                </value>
                <value>
                    <fullName>Multicom - Standard</fullName>
                </value>
                <value>
                    <fullName>Multicom - Combined</fullName>
                </value>
                <value>
                    <fullName>Top Dog</fullName>
                </value>
                <value>
                    <fullName>Traveltek</fullName>
                </value>
                <value>
                    <fullName>Vibe</fullName>
                </value>
                <value>
                    <fullName>Vibe - Standard</fullName>
                </value>
                <value>
                    <fullName>Vibe - Combined</fullName>
                </value>
                <value>
                    <fullName>Voxel</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_10_Currency__c</fullName>
        <label>Account 10 Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>NOK</fullName>
                </value>
                <value>
                    <fullName>SEK</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_1_API__c</fullName>
        <label>Account API</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Atcore</fullName>
                </value>
                <value>
                    <fullName>Comtec</fullName>
                </value>
                <value>
                    <fullName>Conferma</fullName>
                </value>
                <value>
                    <fullName>CWT</fullName>
                </value>
                <value>
                    <fullName>Grasp - Combined</fullName>
                </value>
                <value>
                    <fullName>In House</fullName>
                </value>
                <value>
                    <fullName>Multicom</fullName>
                </value>
                <value>
                    <fullName>Multicom - Standard</fullName>
                </value>
                <value>
                    <fullName>Multicom - Combined</fullName>
                </value>
                <value>
                    <fullName>Top Dog</fullName>
                </value>
                <value>
                    <fullName>Traveltek</fullName>
                </value>
                <value>
                    <fullName>Vibe</fullName>
                </value>
                <value>
                    <fullName>Vibe - Standard</fullName>
                </value>
                <value>
                    <fullName>Vibe - Combined</fullName>
                </value>
                <value>
                    <fullName>Voxel</fullName>
                </value>
                <value>
                    <fullName>Ypsilon</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_1_Currency__c</fullName>
        <label>Account Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AED</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>MXN</fullName>
                </value>
                <value>
                    <fullName>NOK</fullName>
                </value>
                <value>
                    <fullName>SEK</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>ZAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_2_API__c</fullName>
        <label>Account 2 API</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conferma</fullName>
                </value>
                <value>
                    <fullName>In House</fullName>
                </value>
                <value>
                    <fullName>Multicom</fullName>
                </value>
                <value>
                    <fullName>Multicom - Standard</fullName>
                </value>
                <value>
                    <fullName>Multicom - Combined</fullName>
                </value>
                <value>
                    <fullName>Top Dog</fullName>
                </value>
                <value>
                    <fullName>Traveltek</fullName>
                </value>
                <value>
                    <fullName>Vibe</fullName>
                </value>
                <value>
                    <fullName>Vibe - Standard</fullName>
                </value>
                <value>
                    <fullName>Vibe - Combined</fullName>
                </value>
                <value>
                    <fullName>Voxel</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_2_Currency__c</fullName>
        <label>Account 2 Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>NOK</fullName>
                </value>
                <value>
                    <fullName>SEK</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Asset_Billing_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Asset Billing City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Asset_Billing_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Asset Billing State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Asset_Billing_Street__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Asset Billing Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Asset_Billing_Zip_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Asset Billing Zip Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Asset_Fax__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Asset Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account_Asset_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Asset Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account_Asset_Shipping_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Asset Shipping City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Asset_Shipping_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Asset Shipping State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Asset_Shipping_Street__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Asset Shipping Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Asset_Shipping_Zip_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Asset Shipping Zip Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Created_By_Partner_Tag__c</fullName>
        <description>For use in Reports and Sharing Rules.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>For use in Reports and Sharing Rules.</inlineHelpText>
        <label>Account Created By Partner Tag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Created_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The date when the account was created on the portal (optional)</inlineHelpText>
        <label>Account Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Funded__c</fullName>
        <description>CorporatePay</description>
        <label>Account Funded</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Health__c</fullName>
        <label>Account Health</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_10__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Name 10</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Portal Account Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Name 2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account__r.Owner.FirstName  &amp;  Account__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Set_Up_Portal__c</fullName>
        <label>Account Set Up In Portal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Assets</relationshipLabel>
        <relationshipName>Account_Assets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_form_status__c</fullName>
        <label>Application Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Information Requested</fullName>
                </value>
                <value>
                    <fullName>Information Updated</fullName>
                </value>
                <value>
                    <fullName>Approval Requested</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activated_Not_Pumped__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activated Not Pumped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activated__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Activated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Active_Cards__c</fullName>
        <label>Active Cards</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Monthly_Revenue__c</fullName>
        <label>Actual Monthly Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_of_Paper_Checks__c</fullName>
        <label>Estimated # of Paper Checks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ad_Fund_Current_Year_Total__c</fullName>
        <label>Ad Fund Current Year Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ad_Fund_Year_End_Total__c</fullName>
        <label>Ad Fund Year End Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ad_Fund__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Bio.</inlineHelpText>
        <label>Ad Fund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Business_Type__c</fullName>
        <label>Additional Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Telapoint</fullName>
                </value>
                <value>
                    <fullName>Private Site Only</fullName>
                </value>
                <value>
                    <fullName>Mobile Fueling</fullName>
                </value>
                <value>
                    <fullName>OPIS</fullName>
                </value>
                <value>
                    <fullName>Price Risk Management</fullName>
                </value>
                <value>
                    <fullName>Telematics</fullName>
                </value>
                <value>
                    <fullName>WESN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Assets (Additional Contact)</relationshipLabel>
        <relationshipName>Account_Assets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Account__r.BillingStreet  &amp; BR() &amp;
  Account__r.BillingCity &amp; &quot;, &quot; &amp; Account__r.BillingState &amp; &quot; &quot; &amp; 
  Account__r.BillingPostalCode &amp; BR() 
  &amp; Account__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admins_Created__c</fullName>
        <label>Admins Created</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement_Length__c</fullName>
        <label>Agreement Length</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                </value>
                <value>
                    <fullName>4 Years</fullName>
                </value>
                <value>
                    <fullName>5 Years</fullName>
                </value>
                <value>
                    <fullName>6 Years</fullName>
                </value>
                <value>
                    <fullName>7 Years</fullName>
                </value>
                <value>
                    <fullName>8 Years</fullName>
                </value>
                <value>
                    <fullName>9 Years</fullName>
                </value>
                <value>
                    <fullName>10 Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement_Modified__c</fullName>
        <label>Agreement Modified</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allows_subs_piggybacks__c</fullName>
        <label>Allows subs/piggybacks?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount_of_Security_Instrument__c</fullName>
        <label>Amount of Security Instrument</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Gallons__c</fullName>
        <label>Annual Gallons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue_WEX__c</fullName>
        <inlineHelpText>Annual Revenue to WEX for this product</inlineHelpText>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <label>Annual Revenue</label>
        <summarizedField>Asset_Line_Item__c.Monthly_Revenue__c</summarizedField>
        <summaryForeignKey>Asset_Line_Item__c.Account_Asset__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Annual_Spend__c</fullName>
        <inlineHelpText>Annual Spend for Fuel Purchanses</inlineHelpText>
        <label>Annual Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Transactions__c</fullName>
        <label>Annual Transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ap_sent_to_Valitor__c</fullName>
        <label>App Sent To Valitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>App_Form_Received__c</fullName>
        <label>App Form Received</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appl__c</fullName>
        <label>Reason Application Form Rejected</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Application_Form_Rejected__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>KYB Fail</fullName>
                </value>
                <value>
                    <fullName>KYC Fail</fullName>
                </value>
                <value>
                    <fullName>Incomplete Application Form</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Form_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Application Form Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_form_Accepted__c</fullName>
        <label>Application Form Accepted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Asset_Application_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CorporatePay</description>
        <inlineHelpText>This tick box can only be edited by the Customer Services team manager.
Please click the Submit For Approval button or change the Application Status to Approval Requested, to request their approval of the accounts which you have created.</inlineHelpText>
        <label>Asset Application Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asset_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Asset Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Support Advisor who is managing the account creation.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Assets7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assistance_with_Conversion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assistance with Conversion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Autosweep__c</fullName>
        <label>Autosweep</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Average_Tank_Size__c</fullName>
        <label>Average Tank Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BankCompanyNo__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>For credit accounts.</inlineHelpText>
        <label>BankCompanyNo</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bank Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_File_Type__c</fullName>
        <label>Batch File Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Initial_Batch_Registration__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>One time enrollment</fullName>
                </value>
                <value>
                    <fullName>On going automated transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <formula>Account__r.BillingStreet &amp; BR() &amp; 
Account__r.BillingCity &amp; &quot;, &quot; &amp; Account__r.BillingState &amp; &quot; &quot; &amp; 
Account__r.BillingPostalCode &amp; BR() 
&amp; Account__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Cycle__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Cycle</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_System__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing System</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Block_of_Cards_Issued__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Block of Cards Issued</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Blue_Card_B__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PrideLock Block Issued</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Branded</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bulk_Delivery_Required__c</fullName>
        <description>CorporatePay</description>
        <label>Bulk Delivery Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>TBC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CA_SG2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CA SG#</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_SG__c</fullName>
        <label>CA SG#</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Card_Expectation__c</fullName>
        <formula>CASE(TEXT(Enrollment_Methodology__c), &quot;Mandate&quot;, (Actual_of_Paper_Checks__c  * (0.5)), &quot;Voluntary&quot;, (Actual_of_Paper_Checks__c* (0.1)), &quot;Hybrid&quot;, (Actual_of_Paper_Checks__c * (0.3)),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Card Expectation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Card_Funding__c</fullName>
        <label>Card Funding</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct Deposit</fullName>
                </value>
                <value>
                    <fullName>Instant Loading</fullName>
                </value>
                <value>
                    <fullName>Batch Funding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Card_Mailing_Address_es__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Full addresses of all locations which cards need to be sent to.</inlineHelpText>
        <label>Mailing Address(es)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Card_Ordering_Training__c</fullName>
        <label>Card Ordering Training</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Universal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Card_Program_Account__c</fullName>
        <description>This is a legacy field that copies the Card Program from the Account.  We have another field now that copies the card program from the Opportunity since we moved to Gallons etc on the Account Assets.</description>
        <formula>Account__r.Card_Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a legacy field that copies the Card Program from the Account.  We have another field now that copies the card program from the Opportunity since we moved to Gallons etc on the Account Assets.</inlineHelpText>
        <label>Card Program from Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Program_WF_TXT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Card Program WF TXT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>